--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "init-achievements": "node scripts/run-init-achievements.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
